# object-detection

./: LICENSE  README.md  cameraCalibrationStruct.idl  find_object_2d.idl  objectdetection.gen  objectdetectionStruct.idl  stereo.launch  triangulation.idl
codels/: Makefile.am  find_object_2d.cpp  find_object_2d.h  misc.cpp  misc.h  objectdetection_FindObjects_codels.cc  objectdetection_codels.cc
